--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Test get job id
+name: Tests
 on:
     push:
         branches:
@@ -12,17 +12,17 @@ defaults:
 
 jobs:
     test:
+        name: Test
         runs-on: ${{ matrix.os }}
         strategy:
             matrix:
                 os: [macos-latest, windows-latest, ubuntu-latest]
                 version: [1.1.0, 1.0.0]
-        name: a job to get id
         steps:
             - name: Checkout
               uses: actions/checkout@v3
 
-            - name: Use action
+            - name: Setup
               id: job
               uses: ./
               with:
