--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,29 @@ on:
         branches:
             - main
     pull_request:
+    workflow_dispatch: # 手动触发
+        inputs:
+            logLevel:
+                description: 'Log level'
+                required: true
+                default: 'warning'
+                type: choice
+                options:
+                    - info
+                    - warning
+                    - debug
+            tags:
+                description: 'Test scenario tags'
+                required: false
+                type: boolean
+            environment:
+                description: 'Environment to run tests against'
+                type: environment
+                required: true
 
 defaults:
     run:
         shell: bash
-            
 
 jobs:
     test:
@@ -26,7 +44,7 @@ jobs:
               id: job
               uses: ./
               with:
-                job-name: other name
+                  job-name: other name
 
             - name: get putput
               run: echo "the job id is ${{ steps.job.outputs }}"
