--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,50 +1,19 @@
-name: Tests
-on:
-    push:
-        branches:
-            - main
-    pull_request:
-    workflow_dispatch: # 手动触发
-        inputs:
-            logLevel:
-                description: 'Log level'
-                required: true
-                default: 'warning'
-                type: choice
-                options:
-                    - info
-                    - warning
-                    - debug
-            tags:
-                description: 'Test scenario tags'
-                required: false
-                type: boolean
-            environment:
-                description: 'Environment to run tests against'
-                type: environment
-                required: true
-
-defaults:
-    run:
-        shell: bash
+on: [push]
 
 jobs:
-    test:
-        name: Test
-        runs-on: ${{ matrix.os }}
-        strategy:
-            matrix:
-                os: [macos-latest, windows-latest, ubuntu-latest]
-                version: [1.1.0, 1.0.0]
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v3
-
-            - name: Setup
-              id: job
-              uses: ./
-              with:
-                  job-name: other name
-
-            - name: get putput
-              run: echo "the job id is ${{ steps.job.outputs }}"
+  hello_world_job:
+    runs-on: ubuntu-latest
+    name: A job to say hello
+    steps:
+      # To use this repository's private action,
+      # you must check out the repository
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Hello world action step
+        uses: ./ # Uses an action in the root directory
+        id: hello
+        with:
+          who-to-greet: 'Mona the Octocat'
+      # Use the output from the `hello` step
+      - name: Get the output time
+        run: echo "The time was ${{ steps.hello.outputs.time }}"
